<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity"
    android:background="@color/teal_700">

    <TextView
        android:id="@+id/stepsValueView"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:width="30dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsTextView"
        app:layout_constraintVertical_bias="0.085" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="412dp"
        android:layout_height="427dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:uiRotateGestures="true"
        app:uiZoomControls="true"
        app:uiZoomGestures="true"
        app:zOrderOnTop="true" />

    <TextView
        android:id="@+id/travelLengthValueView"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:width="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/travelLenghtTextView"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/stopButtonView"
        android:layout_width="131dp"
        android:layout_height="73dp"
        android:onClick="onStopButtonClick"
        android:text="@string/stop_button"
        android:textColor="@color/grey"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/travelLenghtTextView"
        android:layout_width="120dp"
        android:layout_height="26dp"
        android:text="@string/travel_tv"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/stepsTextView"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:text="@string/steps_tv"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/timerView"
        android:layout_width="131dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/stopButtonView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/caloriesValueView"
        android:layout_width="85dp"
        android:layout_height="26dp"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/timerView"
        app:layout_constraintEnd_toStartOf="@+id/stepsValueView"
        app:layout_constraintHorizontal_bias="0.431"
        app:layout_constraintStart_toEndOf="@+id/travelLengthValueView"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.488" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="512dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_tv"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/travelLengthValueView"
        app:layout_constraintEnd_toStartOf="@+id/stepsTextView"
        app:layout_constraintStart_toEndOf="@+id/travelLenghtTextView"
        app:layout_constraintTop_toBottomOf="@+id/mapView" />

</androidx.constraintlayout.widget.ConstraintLayout>